tests/baselines/reference/decoratorOnClassProperty3.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty3.ts(4,12): error TS1005: ';' expected.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty3.ts (1 errors) ====
    declare function dec(target: any, propertyKey: string): void;
    
    class C {
        public @dec prop;
               ~
!!! error TS1005: ';' expected.
    }